Animation on navigate and Toolbar Back Icon added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
 <resources>
     <string name="app_name">Crud App</string>
 
-    // UserFragment
+    // User Fragment
+    <string name="user_add_title">New User</string>
+    <string name="user_added_success">User added!</string>
+    <string name="user_added_error">Error to add User!</string>
     <string name="user_name_hint">User\'s name</string>
     <string name="user_email_hint">User\'s email</string>
     <string name="user_add_button_text">Add</string>
 
-    <string name="user_added_success">User added!</string>
-    <string name="user_added_error">Error to add User!</string>
-
-    <string name="user_add_title">Users</string>
+    //UserList Fragment
     <string name="user_list_title">Users</string>
 
 </resources>
